# dbus-proxy

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Doxyfile  Jenkinsfile  Makefile  README  README.md  Vagrantfile  example_conf.json  proxy.c  proxy.h
component-test/: README  README.md  conf_allow_all.json  conf_restrict_all.json  conftest.py  service_stubs.py  start_outside_service.py  test_dbus_proxy.py  test_dbus_proxy_permits.py  test_dbus_proxy_restricts.py
profiles/: pelagicore.json
src/: proxy.c  proxy.h
